weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
