weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: weather
    - http:
        paths:
          - path: /weather-api
            pathType: Prefix
            backend:
              service:
                name: weather-app
                port:
                  name: http
